Sonar fix.